# marketing-trends-agent

./: .gitignore  Artículo_Final.md  README.md  app.py  logic.py  pyproject.toml  ui.py
knowledge/: user_preference.txt
src/: crew.py  main.py
src/marketing_trends_agent/: crew.py
src/marketing_trends_agent/config/: agents.yaml  tasks.yaml
