[project]
name = "marketing_trends_agent"
version = "0.1.0"
description = "marketing-trends-agent using crewAI"
authors = [{ name = "Juan José Muñoz"  }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
marketing_trends_agent = "marketing_trends_agent.main:run"
run_crew = "marketing_trends_agent.main:run"
train = "marketing_trends_agent.main:train"
replay = "marketing_trends_agent.main:replay"
test = "marketing_trends_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
